src/elements/snapshots/capitaine__elements__element_tuple__tests__empty_tuple.snap
---
source: src/elements/element_tuple.rs
expression: tuple
---
EmptyElement(
    PhantomData,
    PhantomData,
)
