src/elements/snapshots/capitaine__elements__element_tuple__tests__new_tuple_multi_items-2.snap
---
source: src/elements/element_tuple.rs
expression: tuple_data
---
(
    ElementTupleData(
        LabelData(
            "Hello",
            PhantomData,
            PhantomData,
        ),
        LabelData(
            "Hello2",
            PhantomData,
            PhantomData,
        ),
        LabelData(
            "Hello3",
            PhantomData,
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
            PhantomData,
        ),
        PhantomData,
        PhantomData,
    ),
    (
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
    ),
)
