src/elements/snapshots/capitaine__elements__element_tuple__tests__new_tuple_multi_items.snap
---
source: src/elements/element_tuple.rs
expression: tuple
---
ElementTuple_3(
    Label(
        "Hello",
        FlexParams {
            flex: 1.0,
            alignment: None,
        },
        PhantomData,
        PhantomData,
    ),
    Label(
        "Hello2",
        FlexParams {
            flex: 1.0,
            alignment: None,
        },
        PhantomData,
        PhantomData,
    ),
    Label(
        "Hello3",
        FlexParams {
            flex: 1.0,
            alignment: None,
        },
        PhantomData,
        PhantomData,
    ),
    PhantomData,
    PhantomData,
)
