src/elements/snapshots/capitaine__elements__element_tuple__tests__new_tuple_single_item-2.snap
---
source: src/elements/element_tuple.rs
expression: tuple_data
---
(
    ElementTupleData(
        LabelData(
            "Hello",
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
        ),
        EmptyElementData(
            PhantomData,
        ),
        PhantomData,
    ),
    (
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
        (),
    ),
)
