src/elements/snapshots/capitaine__elements__element_tuple__tests__new_tuple_single_item.snap
---
source: src/elements/element_tuple.rs
expression: tuple
---
MyElementTuple_1(
    Label(
        "Hello",
        PhantomData,
    ),
    PhantomData,
)
